syntax = "proto3";

package Contracts.Services.Identity.Protobuf;

import "Abstractions/Abstractions.proto";

// The greeting service definition.
service Identiter {
  // Sends a greeting
  rpc Login (LoginRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc ListRestaurantItems (ListRestaurantItemsRequest) returns (Abstractions.Protobuf.ListResponse);
  rpc GetListStoreNear1 (LocationRequest1) returns (Abstractions.Protobuf.ListResponse);
}

// The request message containing the user's name.
message LoginRequest {
  string UserName = 1;
  string PassWord = 2;
}

message IdentityDetails {
	string Id = 1;
	string Role = 2;
	string Token = 3;
}

message ListRestaurantItemsRequest {
	Abstractions.Protobuf.Paging Paging = 1;
}

message LocationRequest1 {
	Abstractions.Protobuf.Paging Paging = 1;
	//double Longitude = 2;
	//double Latitude = 3;
}



